Adiciona paleta de cores

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
     <header>
       <h1 id="title">Paleta de Cores</h1>
     </header>
+    <div id="color-palette">
+      <div id="colorOne" class="color"></div>
+      <div id="colorTwo" class="color"></div>
+      <div id="colorThree" class="color"></div>
+      <div id="colorFour" class="color"></div>
+    </div>
   </body>
 </html>
