--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
     <header>
@@ -12,9 +11,11 @@
     </header>
     <div id="color-palette">
       <div id="colorOne" class="color"></div>
-      <div id="colorTwo" class="color"></div>
-      <div id="colorThree" class="color"></div>
-      <div id="colorFour" class="color"></div>
+      <div id="corAleatoria" class="color"></div>
+      <div id="corAleatoria" class="color"></div>
+      <div id="corAleatoria" class="color"></div>
+      <button id="button-random-color">Cores aleatórias</button>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
