--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     </header>
     <div id="color-palette">
       <div id="colorOne" class="color"></div>
-      <div id="corAleatoria" class="color"></div>
-      <div id="corAleatoria" class="color"></div>
-      <div id="corAleatoria" class="color"></div>
-      <button id="button-random-color">Cores aleatórias</button>
+      <div id="colorTwo" class="color"></div>
+      <div id="colorThree" class="color"></div>
+      <div id="colorFour" class="color"></div>
     </div>
+    <button id="button-random-color">Cores aleatórias</button>
     <script src="script.js"></script>
   </body>
 </html>
