--- a/index.html
+++ b/index.html
@@ -16,6 +16,41 @@
       <div id="colorFour" class="color"></div>
     </div>
     <button id="button-random-color">Cores aleatórias</button>
+    <div id="pixel-board">
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+    </div>
+    <div id="pixel-board">
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+    </div>
+    <div id="pixel-board">
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+    </div>
+    <div id="pixel-board">
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+    </div>
+    <div id="pixel-board">
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+      <div id="pixel"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
