--- a/index.html
+++ b/index.html
@@ -10,47 +10,13 @@
       <h1 id="title">Paleta de Cores</h1>
     </header>
     <div id="color-palette">
-      <div id="colorOne" class="color"></div>
+      <div id="colorOne" class="color selected"></div>
       <div id="colorTwo" class="color"></div>
       <div id="colorThree" class="color"></div>
       <div id="colorFour" class="color"></div>
     </div>
     <button id="button-random-color">Cores aleatórias</button>
-    <div id="pixel-board">
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-    </div>
-    <div id="pixel-board">
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-    </div>
-    <div id="pixel-board">
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-    </div>
-    <div id="pixel-board">
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-    </div>
-    <div id="pixel-board">
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-      <div id="pixel"></div>
-    </div>
+    <div id="pixel-board"></div>
     <script src="script.js"></script>
   </body>
 </html>
