--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       <h1 id="title">Paleta de Cores</h1>
     </header>
     <div id="color-palette">
-      <div id="colorOne" class="color selected"></div>
-      <div id="colorTwo" class="color"></div>
-      <div id="colorThree" class="color"></div>
-      <div id="colorFour" class="color"></div>
+      <div class="color selected"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>
     </div>
     <button id="button-random-color">Cores aleatórias</button>
     <div id="pixel-board"></div>
